@@ -1,4 +1,12 @@
 cpi-covid/grafico-casos-confirmados.png
 Os alertas da quarta onda de COVID-19
-O Brasil superou os Estados Unidos na taxa de população completamente vacinada contra a Covid-19. De acordo com dados do DataSUS (departamento de informática que centraliza informações do Sistema Único de Saúde), o país tem 59,9% de pessoas completamente imunizadas, enquanto os EUA, segundo informações do CDC (Centro de Controle e Prevenção de Doença), chegaram a 58,8% de americanos vacinados.
-Em números absolutos o Brasil aplicou menos doses do que os EUA. A diferença se dá porque a população do país estrangeiro é maior.
+De acordo Mariângela Simão diretora-geral adjunta de acesso a medicamentos e produtos farmacêuticos da OMS, os casos de Covid-19 na Europa podem se repetir em outros países se nada for feito.
+Com o surto de casos de Covid-19 em vários países da Europa, China e Rússia, a Organização Mundial da Saúde (OMS) afirmou nesta segunda-feira (22) que o mundo está entrando em uma quarta onda da pandemia do novo coronavírus.
+A declaração foi feita pela diretora-geral adjunta de acesso a medicamentos e produtos farmacêuticos, a brasileira Mariângela Simão, durante a conferência de abertura de um evento realizado pela Associação Brasileira de Saúde Coletiva (Abrasco). “O mundo está entrando em uma quarta onda, mas as regiões têm tido um comportamento diferente em relação à pandemia”, declarou Mariângela Simão.
+Segundo ela, os casos de Covid-19 na Europa podem se repetir em outros países se nada for feito. “Tivemos nas últimas 24 horas mais de 440 mil novos casos confirmados. E isso que há subnotificação em vários continentes”.
+O vírus continua evoluindo com variantes mais transmissíveis, de acordo com a diretora da OMS. Mas em razão da vacinação houve uma dissociação entre casos e mortes, pelo fato da vacinação ter reduzido os óbitos decorrentes da Covid-19. Ela lembrou que a imunização reduz as hospitalizações, mas não interrompe a transmissão.
+Uma quarta onda de Covid-19 se espalha em países da Europa que estão repensando suas estratégias de combate ao novo coronavírus. O surto entre pessoas não vacinadas no continente chamou atenção da OMS que aponta um epicentro e que o número real deve ser o dobro ou até o triplo do que é registrado oficialmente.
+A recusa da vacinação por parte da população é o principal motivo para o crescimento de casos de Covid-19 na Europa. Vários países europeus já retomaram a adoção de restrições, outros apostam em campanhas de vacinação para conter a disseminação do vírus.
+O Brasil registrou 123 mortes por Covid-19 e 2.594 novos casos em todo o país em 24 horas, segundo dados divulgados nesta segunda (22) pelo Conselho Nacional de Secretários de Saúde (Conass).
+A média móvel de óbitos, que considera os dados dos últimos sete dias, ficou em 205, e a média móvel de novos casos em 8.443.  A média móvel de mortes segue abaixo dos 300 desde o dia 1º novembro, quando o Brasil contou 303 óbitos na média de sete dias, conforme dados do Conass. O país contabiliza 612.842 óbitos e 22.018.889 casos de coronavírus desde o início da pandemia.
+https://saude.abril.com.br/medicina/o-mundo-esta-entrando-na-quarta-onda-da-covid-19-diz-diretora-da-oms/
