@@ -1,4 +1,15 @@
 cpi-covid/brasil-taxa-mortes.jpg
 Brasil tem salto de 15% em taxa de mortes
-O Brasil superou os Estados Unidos na taxa de população completamente vacinada contra a Covid-19. De acordo com dados do DataSUS (departamento de informática que centraliza informações do Sistema Único de Saúde), o país tem 59,9% de pessoas completamente imunizadas, enquanto os EUA, segundo informações do CDC (Centro de Controle e Prevenção de Doença), chegaram a 58,8% de americanos vacinados. 
-Em números absolutos o Brasil aplicou menos doses do que os EUA. A diferença se dá porque a população do país estrangeiro é maior.
+País registrou cerca de 195,5 mil mortes a mais que em 2019, a maior alta histórica, a maioria de idosos. Número coincide com total de mortos por Covid-19 contabilizado pelo Consórcio dos Veículos de Imprensa, o que indica o peso da pandemia para o recorde de óbitos no país.
+Ao todo, foram registradas 195.965 mortes a mais no país na comparação com 2019, o que corresponde a um aumento de 14,9% dos registros de óbitos – maior aumento, tanto em número absoluto quanto em percentuais, desde 1984, quando teve início a série histórica das Estatísticas do Registro Civil feita pelo IBGE.
+O número de mortes a mais que o registrado em 2019 coincide com total de mortos em decorrência da Covid-19 contabilizado pelo Consórcio de Veículos de imprensa – foram 195.441, conforme balanço divulgado no dia 1º de janeiro de 2021. Como são levantamentos com fontes e metodologias diferentes, porém, não é possível estabelecer uma relação direta entre os números. Até esta quarta-feira (17), o Brasil registrava 611.898 mortes desde o início da pandemia, sendo que a grande maioria desse total de óbitos (68%) ocorreu em 2021.
+Antes, o maior aumento no número de mortes no Brasil havia sido registrado entre 1992 e 1993 – foram 56,4 mil registros a mais de um ano para o outro, o que corresponde a uma alta de 6,7%. “Nessa época, o sub-registro era muito alto, o que pode interferir nessa variação. Então, fizemos essa análise considerando os últimos dez anos. Nesse intervalo, o maior aumento foi registrado na passagem de 2015 para 2016, cerca de 43,2 mil mortes a mais, ou uma alta de 3,5%”, apontou a gerente das Estatísticas do Registro Civil, Klivia Brayner.
+A pesquisa mostrou, também, que:
+91% do total de mortes ocorridas no país se deram em decorrência de causas naturais;
+73,5% dos óbitos registrados no país ao longo de 2020 ocorreram em hospitais;
+o aumento substantivo foi concentrado entre pessoas acima de 60 anos de idade;
+o número de mortes aumentou mais entre homens (16,7%) que entre mulheres (12,7%);
+houve queda no número de mortes na faixa etária abaixo de 15 anos.
+Dentre as 195.965 mortes registradas a mais em 2020 na comparação com o ano anterior, 148.561 foram de pessoas com mais de 60 anos de idade. Ou seja, a população idosa, mais vulnerável às complicações da Covid-19, respondeu por 75,8% do aumento do número de óbitos no país. Para as idades abaixo de 15 anos, observou-se redução dos óbitos entre 2019 e 2020”, destacou o IBGE. A redução de mortes nessa faixa etária foi de 15,1%, sendo ligeiramente maior para os homens (15,5%) e menor para as mulheres (14,6%).
+Segundo a gerente da pesquisa, Klívia Brayner, a queda da natalidade no ano passado foi a segunda mais intensa desde 2016, quando o país viveu uma pandemia de Zika vírus e viu o número de nascimentos cair em 5%. “Em 2020, contudo, cabe ressaltar que a pandemia pode ter agravado o adiamento dos registros, por conta da dificuldade de deslocamento até os cartórios. Então, pode ser que uma parte dos 133 mil registros de nascimentos a menos tenha apenas sido postergado”, explica Brayner.
+https://g1.globo.com/economia/noticia/2021/11/18/com-pandemia-numero-de-mortes-no-brasil-tem-salto-de-quase-15percent-em-2020-aponta-ibge.ghtml
