@@ -1,4 +1,12 @@
 cpi-covid/renam-calheiros-relatorio-cpi-covid.png
 É aprovado relatório que pede indiciamento de Bolsonaro e outras 77 pessoas
-O Brasil superou os Estados Unidos na taxa de população completamente vacinada contra a Covid-19. De acordo com dados do DataSUS (departamento de informática que centraliza informações do Sistema Único de Saúde), o país tem 59,9% de pessoas completamente imunizadas, enquanto os EUA, segundo informações do CDC (Centro de Controle e Prevenção de Doença), chegaram a 58,8% de americanos vacinados. 
-Em números absolutos o Brasil aplicou menos doses do que os EUA. A diferença se dá porque a população do país estrangeiro é maior.
+O relatório final da Comissão Parlamentar de Inquérito (CPI) da Covid, apresentado na semana passada pelo senador Renan Calheiros (MDB-AL), foi aprovado por 7 votos a 4 em sessão nesta terça-feira (26/10).
+O texto, votado pelos membros titulares da comissão, recomenda que o presidente Jair Bolsonaro seja investigado e, eventualmente, responsabilizado em três frentes devido à gestão do seu governo na pandemia de coronavírus: por crimes comuns, por crimes de responsabilidade e por crimes contra a humanidade. Com o resultado, essas acusações contra o presidente serão analisadas em três órgãos.
+Além do presidente, o relatório pede o indiciamento de 77 pessoas - incluindo ex-ministros, ministros, políticos, servidores públicos, empresários, membros do chamado "gabinete paralelo" - e duas empresas, a Precisa Medicamentos e a VTCLog.
+Entre as imputações estão crimes comuns, que têm pena de prisão e/ou multa, crimes contra a humanidade e crimes de responsabilidade, que podem resultar em impeachment. Nos casos de crimes comuns, somadas, as penas previstas no Código Penal podem chegar a quase 40 anos de prisão, em caso de pena máxima. Se a pena for mínima, Bolsonaro poderia ser condenado a cerca de 20 anos de detenção.
+O crime contra a humanidade acontece quanto há prática de atos desumanos que causem intencionalmente grande sofrimento, ou afetem gravemente a integridade física ou a saúde física ou mental, no quadro de ataque generalizado ou sistemático contra qualquer população civil. Nesse caso, a eventual responsabilização depende do Tribunal Penal Internacional, em Haia, na Holanda. Na hipótese de a denúncia ser aceita, a pena máxima é de 30 anos.
+O presidente Jair Bolsonaro reclamou nesta segunda-feira da repercussão internacional do relatório da CPI da Covid, que pediu seu indiciamento por nove crimes. Bolsonaro listou algumas das acusações que constam no documento, além de outras cogitadas mas depois descartadas pelos senadores, e disse que é "um absurdo o que esses caras fizeram".
+"Por mais que nós saibamos o que acontece lá, até pelo perfil daqueles três senadores, há uma repercussão negativa forte fora do Brasil. Sabemos disso. Me rotulam como genocida, curandeiro, falsificador de documentos, exterminador de índios. É um absurdo o que esses caras fizeram", disse Bolsonaro, em entrevista à rádio Caçula FM, do Mato Grosso do Sul.
+As conclusões do relatório final da CPI podem implicar no envio do documento para órgãos distintos. No caso de ilícitos criminais ou civis, por exemplo, a competência para denunciar formalmente os investigados pela CPI ou de requerer mais investigações é do Ministério Público. No caso de autoridades com foro, caso do presidente Jair Bolsonaro, esse papel é desempenhado pela Procuradoria-Geral da República.
+Em quase seis meses de trabalho, a CPI da Pandemia colheu mais de 50 depoimentos, quebrou 251 sigilos, analisou 9,4 terabytes de documentos e fez mais de 60 reuniões, marcadas por intensos embates.
+https://br.noticias.yahoo.com/cpi-da-covid-aprova-relatorio-que-indicia-bolsonaro-e-outras-77-pessoas-por-crimes-na-pandemia-232940662.html
