@@ -8,3 +8,4 @@ Biondi atribui o sucesso da vacinação no Brasil à capacidade que o Programa N
 Outro fator essencial para a rapidez no avanço da cobertura vacinal foi a aderência da população brasileira às campanhas. O médico intensivista explica que os brasileiros têm um costume cultural de se vacinar. “Apesar das fake news e teorias de conspiração, muito rapidamente as pessoas foram percebendo que as vacinas são seguras e benéficas. Isso com certeza tem relação com a cultura do próprio brasileiro, que não cultiva um pensamento antivacina", explica Rodrigo Biondi.
 Por outro lado, os estadunidenses têm uma forte cultura de negacionismo contra os resultados da vacina. Nos EUA, a campanha de vacinação tem dificuldade de avançar em regiões e públicos específicos. "Os Estados Unidos tem outra particularidade, porque existem bolsões antivacina. Alguns estados têm maior predomínio de anti vacinas, principalmente os que são majoritariamente republicanos”, diz Rodrigo Biondi, que ainda destaca o perigo dessa situação. “Assim o vírus continua circulando naquele ambiente, enquanto que em outros bairros e cidades com maior adesão à vacina, o vírus é praticamente extinto".
 Ele diz que ainda é cedo para relaxar as medidas de segurança contra o coronavírus, mas salienta que a taxa de 59,75% da população completamente vacinada é importante para diminuir a circulação do vírus. “A gente sabe que para infecções virais respiratórias, quando a gente alcança uma taxa de respiração na casa dos 60/70%, temos uma drástica redução na taxa de transmissão”, afirmou.
+https://saude.estadao.com.br/noticias/geral,brasil-supera-eua-vacinados-contra-covid,70003899914#:~:text=Covid%2D19%20no%20Brasil&text=Dados%20do%20Our%20World%20in,isso%2C%20cerca%20de%2021%25.
